[tool.poetry]
name = "pyprolog"
version = "0.1.0"
description = "Prolog Interpreter"
authors = ["robjsliwa <robjsliwa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
